[package]
name = "ordered_hashmap"
version = "0.0.1"
authors = ["Ameer Hamza <r3alst@gmail.com>"]
categories = ["hashmap", "dsa"]
description = "Ordered Hashmap implementation to overcome arbitrary order of key-values problem in Rust"
keywords = ["ordered hashmap", "linked hashmap", "hashmap", "insertion ordered hashmap"]
license = "Apache-2.0"
repository = "https://github.com/r3alst/ordered-hashmap"
edition = "2021"

[dependencies]
